@@ -5,3 +5,5 @@
 /www/public/rdoc/
 /spec/assets/app.*.css
 /spec/assets/app.*.js
+/spec/assets/app.*.css.gz
+/spec/assets/app.*.js.gz
